# kuro

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build  meson_options.txt  vcpkg.json
.github/workflows/: ci.yml
docs/: API.md
include/kuro/: address.hpp  cancellation.hpp  continuation.hpp  error.hpp  event.hpp  event_loop.hpp  gather.hpp  kuro.hpp  mutex.hpp  promise.hpp  queuelike.hpp  shared_task.hpp  sleep.hpp  socket.hpp  task.hpp  task_executor.hpp  unique_coroutine_handle.hpp  unique_fd.hpp  util.hpp  with_cancellation.hpp
test/: gather.cpp  shared_task.cpp  task.cpp  with_cancellation.cpp
